@@ -52,7 +52,7 @@ public class WordMatchMap {
       for (String word2 : allWords) {
         Word w1 = new Word(word1);
         Word w2 = new Word(word2);
-        if (w1.alignsWith(w2) && word1 != word2) {
+        if (w1.alignsWith(w2) && !word1.equals(word2)) {
           WordMatches currentMatches1 = this.wordMatchMap.get(word1);
           WordMatches currentMatches2 = this.wordMatchMap.get(word2);
           for (WordCoordinate match2 : currentMatches2.getExactMatches()) {
@@ -91,7 +91,7 @@ public class WordMatchMap {
     List<Integer> positionList = Lists.newArrayList();
     for (WordCoordinate wordCoordinate : exactMatches) {
       if (wordCoordinate.witnessNumber == i) {
-        positionList.add(new Integer(wordCoordinate.positionInWitness));
+        positionList.add(Integer.valueOf(wordCoordinate.positionInWitness));
       }
     }
     int[] positionArray = new int[positionList.size()];
